# type-safe-id

./: Cargo.toml  LICENSE-MIT  README.md
benches/: type_id.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: static_typeid.rs  typeid.rs
src/: arbitrary.rs  lib.rs  serde.rs
tests/: spec.rs
