[package]
name = "type-safe-id"
version = "0.3.1"
edition = "2021"
description = "A type-safe, K-sortable, globally unique identifier"
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/type-safe-id"

[features]
default = []
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde"]

[dependencies]
uuid = { version = "1.6.0", features = ["v7"] }
rand = { version = "0.8.0" }
thiserror = "2.0.0"
arrayvec = "0.7.0"

serde = { version = "1.0.0", optional = true }
arbitrary = { version = "1.0.0", optional = true }

# Properly document all features on docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
criterion = "0.5"
libtest-mimic = "0.8"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }

[[bench]]
name = "type_id"
harness = false

[[test]]
name = "spec"
path = "tests/spec.rs"
harness = false
